hero section added

--- a/index.html
+++ b/index.html
@@ -4,9 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/style.css">
     <title>COEP WebTeam</title>
 </head>
 <body>
-    
+    <!-- Navbar -->
+    <div class="app__navbar">
+        <div class="app__navbar-left">
+            <img src="/" alt="logo">
+        </div>
+        <div class="app__navbar-right">
+                <a href="/">Home</a>
+                <a href="/">Menu2</a>
+                <a href="/">Menu3</a>
+                <a href="/">Menu3</a>
+        </div>
+    </div>
+    <main>
+        <h1 class="mainHeading">COEP WEBTEAM</h1>
+        <p class="tagline">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+    </main>
 </body>
 </html>
