--- a/index.html
+++ b/index.html
@@ -23,6 +23,15 @@
     <main>
         <h1 class="mainHeading">COEP WEBTEAM</h1>
         <p class="tagline">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        <div class="scroll-down">
+            <a href="">
+                <img src="./assets/chevrons-down.svg" alt="scroll-down">
+                <p id="scroll-down">SCROLL DOWN</p>
+            </a>
+        </div>
     </main>
+    <div class="app__intro">
+        
+    </div>
 </body>
 </html>
