--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <!-- Navbar -->
     <div class="app__navbar">
         <div class="app__navbar-left">
-            <img src="/" alt="logo">
+            <!-- <img src="/" alt="logo"> -->
+            <p id="logo-text">LOGO</p>
         </div>
         <div class="app__navbar-right">
                 <a href="/">Home</a>
@@ -21,32 +22,11 @@
         </div>
     </div>
     <main>
-        <h1 class="mainHeading">COEP WEBTEAM</h1>
-        <p class="tagline">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-        <div class="scroll-down">
-            <a href="#intro">
-                <img src="./assets/chevrons-down.svg" alt="scroll-down">
-                <p id="scroll-down">SCROLL DOWN</p>
-            </a>
-        </div>
-    </main>
-    <div class="app__intro" id="intro">
-        <h2>WHO ARE WE?</h2>
-        <div class="app__intro-container">
-            <div class="app__intro-container-top">
-                <p>🔴🟢🟡</p>
-            </div>
-            <div class="text-container">
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. In pellentesque massa placerat duis. Dictum sit amet justo donec enim diam. Ullamcorper velit sed ullamcorper morbi tincidunt ornare massa eget egestas. Pharetra diam sit amet nisl suscipit adipiscing bibendum est ultricies. 
-                    Ultrices vitae auctor eu augue ut lectus arcu bibendum. Et molestie ac feugiat sed lectus vestibulum mattis. Nunc aliquet bibendum enim facilisis gravida neque convallis a. Diam sit amet nisl suscipit adipiscing bibendum est. Enim neque volutpat ac tincidunt vitae semper quis lectus nulla. Dui vivamus arcu felis bibendum ut tristique. 
-                    
-                </p>
-                <p>Tortor consequat id porta nibh venenatis cras sed felis. Pellentesque habitant morbi tristique senectus et netus. Amet volutpat consequat mauris nunc congue nisi vitae. A diam sollicitudin tempor id eu nisl nunc. Sed cras ornare arcu dui vivamus.
-                    Erat pellentesque adipiscing commodo elit at imperdiet dui accumsan sit. At varius vel pharetra vel turpis. Nisl suscipit adipiscing bibendum est ultricies integer quis auctor elit. Tortor consequat id porta nibh venenatis cras sed felis. Odio pellentesque diam volutpat commodo. Amet massa vitae tortor condimentum lacinia.</p>
-            </div>
+            <h1>
+                COEP WEBTEAM
+            </h1>
+            <p>Lorem Ipsum dolor sit amet, consectetur adipiscing elit.</p>
 
-        </div>
-    </div>
+    </main>
 </body>
 </html>
