major design changes

--- a/index.html
+++ b/index.html
@@ -22,10 +22,21 @@
         </div>
     </div>
     <main>
-            <h1>
-                COEP WEBTEAM
-            </h1>
-            <p>Lorem Ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        <div class="app__main-left">
+            <h1>COEP Webteam</h1>
+            <p>Lorem ipsum dolor sit amet, consectuter adipiscing</p>
+            <div class="app__main-left-social">
+                <a href="">
+                    <button><img src="./assets/instagram.svg" alt=""></button>
+                </a>
+                <a href="">
+                    <button><img src="./assets/linkedin.svg" alt=""></button>
+                </a>
+            </div>
+        </div>
+        <div class="app__main-right">
+            <img src="./assets/illus.svg" alt="illustration">
+        </div>
 
     </main>
 </body>
