--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
             <p id="logo-text">LOGO</p>
         </div>
         <div class="app__navbar-right">
-                <a href="/">Home</a>
-                <a href="/">Menu2</a>
-                <a href="/">Menu3</a>
-                <a href="/">Menu3</a>
+                <a href="#home">Home</a>
+                <a href="#about">About Us</a>
+                <a href="#team">The Team</a>
+                <!-- <a href="/">Menu3</a> -->
         </div>
     </div>
-    <main>
+    <main id="home">
         <div class="app__main-left">
             <h1>COEP Webteam</h1>
             <p>Lorem ipsum dolor sit amet, consectuter adipiscing</p>
@@ -33,11 +33,109 @@
                     <button><img src="./assets/linkedin.svg" alt=""></button>
                 </a>
             </div>
+            <a href="" id="scroll">
+                <div class="scroll-down">
+                    <p>Scroll Down</p>
+                    <img src="./assets/arrow-down-circle.svg" alt="">
+                </div>
+            </a>
         </div>
         <div class="app__main-right">
             <img src="./assets/illus.svg" alt="illustration">
         </div>
 
     </main>
+    <div class="app__about" id="about">
+        <div class="app__about-headline">
+            <img src="./assets/grid (1).svg" alt="grid">
+            <h2>About Us</h2>
+        </div>
+        <div class="app__about-content">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Nulla aliquet porttitor lacus luctus. Vel eros donec ac odio. Bibendum est ultricies integer quis auctor elit sed vulputate mi. Scelerisque mauris pellentesque pulvinar pellentesque habitant morbi. Etiam dignissim diam quis enim lobortis scelerisque fermentum dui faucibus. Euismod lacinia at quis risus sed vulputate odio ut enim. Vitae purus faucibus ornare suspendisse sed. Eget est lorem ipsum dolor sit amet consectetur adipiscing elit. At tempor commodo ullamcorper a. Gravida quis blandit turpis cursus in hac habitasse platea. Leo integer malesuada nunc vel risus commodo. Commodo elit at imperdiet dui accumsan sit amet. Facilisi etiam dignissim diam quis enim lobortis scelerisque. Integer vitae justo eget magna fermentum. Fringilla ut morbi tincidunt augue interdum velit euismod in. Ipsum dolor sit amet consectetur adipiscing elit ut aliquam purus. Libero id faucibus nisl tincidunt eget nullam non nisi. Sit amet mauris commodo quis imperdiet massa tincidunt nunc pulvinar.</p>
+            <br>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Nulla aliquet porttitor lacus luctus. Vel eros donec ac odio. Bibendum est ultricies integer quis auctor elit sed vulputate mi. Scelerisque mauris pellentesque pulvinar pellentesque habitant morbi. Etiam dignissim diam quis enim lobortis scelerisque fermentum dui faucibus. Euismod lacinia at quis risus sed vulputate odio ut enim. Vitae purus faucibus ornare suspendisse sed. Eget est lorem ipsum dolor sit amet consectetur adipiscing elit. At tempor commodo ullamcorper a. Gravida quis blandit turpis cursus in hac habitasse platea. Leo integer malesuada nunc vel risus commodo. Commodo elit at imperdiet dui accumsan sit amet. Facilisi etiam dignissim diam quis enim lobortis scelerisque. Integer vitae justo eget magna fermentum. Fringilla ut morbi tincidunt augue interdum velit euismod in. Ipsum dolor sit amet consectetur adipiscing elit ut aliquam purus. Libero id faucibus nisl tincidunt eget nullam non nisi. Sit amet mauris commodo quis imperdiet massa tincidunt nunc pulvinar.</p>
+
+        </div>
+    </div>
+    <div class="app__team" id="team">
+        <div class="app__team-headline">
+            <img src="./assets/users.svg" alt="team">
+            <h2>The Team</h2>
+        </div>
+        <div class="app__team-content">
+            <div class="app__team-content-card">
+                <img src="./assets/about04.png" alt="userImg" class="userImg">
+                <p id="name">Siddhesh Thakare</p>
+                <p>TY ENTC</p>
+                <div class="app__social">
+                    <a href="/"><img src="./assets/instagram.svg" alt=""></a>
+                    <a href="/"><img src="./assets/linkedin.svg" alt=""></a>
+                </div>
+
+            </div>
+            <div class="app__team-content-card">
+                <img src="./assets/about04.png" alt="userImg" class="userImg">
+                <p id="name">Siddhesh Thakare</p>
+                <p>TY ENTC</p>
+                <div class="app__social">
+                    <a href="/"><img src="./assets/instagram.svg" alt=""></a>
+                    <a href="/"><img src="./assets/linkedin.svg" alt=""></a>
+                </div>
+
+            </div>
+            <div class="app__team-content-card">
+                <img src="./assets/about04.png" alt="userImg" class="userImg">
+                <p id="name">Siddhesh Thakare</p>
+                <p>TY ENTC</p>
+                <div class="app__social">
+                    <a href="/"><img src="./assets/instagram.svg" alt=""></a>
+                    <a href="/"><img src="./assets/linkedin.svg" alt=""></a>
+                </div>
+
+            </div>
+            <div class="app__team-content-card">
+                <img src="./assets/about04.png" alt="userImg" class="userImg">
+                <p id="name">Siddhesh Thakare</p>
+                <p>TY ENTC</p>
+                <div class="app__social">
+                    <a href="/"><img src="./assets/instagram.svg" alt=""></a>
+                    <a href="/"><img src="./assets/linkedin.svg" alt=""></a>
+                </div>
+
+            </div>
+            <div class="app__team-content-card">
+                <img src="./assets/about04.png" alt="userImg" class="userImg">
+                <p id="name">Siddhesh Thakare</p>
+                <p>TY ENTC</p>
+                <div class="app__social">
+                    <a href="/"><img src="./assets/instagram.svg" alt=""></a>
+                    <a href="/"><img src="./assets/linkedin.svg" alt=""></a>
+                </div>
+
+            </div>
+            <div class="app__team-content-card">
+                <img src="./assets/about04.png" alt="userImg" class="userImg">
+                <p id="name">Siddhesh Thakare</p>
+                <p>TY ENTC</p>
+                <div class="app__social">
+                    <a href="/"><img src="./assets/instagram.svg" alt=""></a>
+                    <a href="/"><img src="./assets/linkedin.svg" alt=""></a>
+                </div>
+
+            </div>
+        </div>
+    </div>
+    <hr class="prefooter">
+    <footer>
+        <div class="app__footer-left">
+            <p id="footer-logo">LOGO</p>
+            <p>Mail: webteam@coep.ac.in</p>
+        </div>
+        <div class="app__footer-right">
+                <a href="#home">Home</a>
+                <a href="#about">About Us</a>
+                <a href="#team">The Team</a>
+        </div>
+    </footer>
 </body>
 </html>
