--- a/index.html
+++ b/index.html
@@ -73,56 +73,7 @@
                 </div>
 
             </div>
-            <div class="app__team-content-card">
-                <img src="./assets/about04.png" alt="userImg" class="userImg">
-                <p id="name">Siddhesh Thakare</p>
-                <p>TY ENTC</p>
-                <div class="app__social">
-                    <a href="/"><img src="./assets/instagram.svg" alt=""></a>
-                    <a href="/"><img src="./assets/linkedin.svg" alt=""></a>
-                </div>
-
-            </div>
-            <div class="app__team-content-card">
-                <img src="./assets/about04.png" alt="userImg" class="userImg">
-                <p id="name">Siddhesh Thakare</p>
-                <p>TY ENTC</p>
-                <div class="app__social">
-                    <a href="/"><img src="./assets/instagram.svg" alt=""></a>
-                    <a href="/"><img src="./assets/linkedin.svg" alt=""></a>
-                </div>
-
-            </div>
-            <div class="app__team-content-card">
-                <img src="./assets/about04.png" alt="userImg" class="userImg">
-                <p id="name">Siddhesh Thakare</p>
-                <p>TY ENTC</p>
-                <div class="app__social">
-                    <a href="/"><img src="./assets/instagram.svg" alt=""></a>
-                    <a href="/"><img src="./assets/linkedin.svg" alt=""></a>
-                </div>
-
-            </div>
-            <div class="app__team-content-card">
-                <img src="./assets/about04.png" alt="userImg" class="userImg">
-                <p id="name">Siddhesh Thakare</p>
-                <p>TY ENTC</p>
-                <div class="app__social">
-                    <a href="/"><img src="./assets/instagram.svg" alt=""></a>
-                    <a href="/"><img src="./assets/linkedin.svg" alt=""></a>
-                </div>
-
-            </div>
-            <div class="app__team-content-card">
-                <img src="./assets/about04.png" alt="userImg" class="userImg">
-                <p id="name">Siddhesh Thakare</p>
-                <p>TY ENTC</p>
-                <div class="app__social">
-                    <a href="/"><img src="./assets/instagram.svg" alt=""></a>
-                    <a href="/"><img src="./assets/linkedin.svg" alt=""></a>
-                </div>
-
-            </div>
+            <!-- Write HTML for your card here. Give the classname as "app__team-content-card" to your card. -->
         </div>
     </div>
     <hr class="prefooter">
