made responsive for phone

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                 <!-- <a href="/">Menu3</a> -->
         </div>
     </div>
+    <!-- Main -->
     <main id="home">
         <div class="app__main-left">
             <h1>COEP Webteam</h1>
@@ -45,6 +46,7 @@
         </div>
 
     </main>
+    <!-- About -->
     <div class="app__about" id="about">
         <div class="app__about-headline">
             <img src="./assets/grid (1).svg" alt="grid">
@@ -57,6 +59,7 @@
 
         </div>
     </div>
+    <!-- Team -->
     <div class="app__team" id="team">
         <div class="app__team-headline">
             <img src="./assets/users.svg" alt="team">
@@ -74,9 +77,11 @@
 
             </div>
             <!-- Write HTML for your card here. Give the classname as "app__team-content-card" to your card. -->
+            <!-- Classname for image: userImg -->
         </div>
     </div>
     <hr class="prefooter">
+    <!-- Footer -->
     <footer>
         <div class="app__footer-left">
             <p id="footer-logo">LOGO</p>
