updated profile links

--- a/index.html
+++ b/index.html
@@ -28,16 +28,16 @@
             <p>Lorem ipsum dolor sit amet, consectuter adipiscing</p>
             <div class="app__main-left-social">
                 <a href="">
-                    <button><img src="./assets/instagram.svg" alt=""></button>
+                    <button><img src="./assets/instagram.svg" alt="instagram"></button>
                 </a>
                 <a href="">
-                    <button><img src="./assets/linkedin.svg" alt=""></button>
+                    <button><img src="./assets/linkedin.svg" alt="linkedin"></button>
                 </a>
             </div>
             <a href="" id="scroll">
                 <div class="scroll-down">
                     <p>Scroll Down</p>
-                    <img src="./assets/arrow-down-circle.svg" alt="">
+                    <img src="./assets/arrow-down-circle.svg" alt="scroll">
                 </div>
             </a>
         </div>
@@ -71,8 +71,8 @@
                 <p id="name">Siddhesh Thakare</p>
                 <p>TY ENTC</p>
                 <div class="app__social">
-                    <a href="/"><img src="./assets/instagram.svg" alt=""></a>
-                    <a href="/"><img src="./assets/linkedin.svg" alt=""></a>
+                    <a href="https://www.instagram.com/sidd_thakare0203/"><img src="./assets/instagram.svg" alt="instagram"></a>
+                    <a href="https://www.linkedin.com/in/siddhesh-thakare-665954209/"><img src="./assets/linkedin.svg" alt="linkedin"></a>
                 </div>
 
             </div>
