--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <button><img src="./assets/linkedin.svg" alt="linkedin"></button>
                 </a>
             </div>
-            <a href="" id="scroll">
+            <a href="#about" id="scroll">
                 <div class="scroll-down">
                     <p>Scroll Down</p>
                     <img src="./assets/arrow-down-circle.svg" alt="scroll">
