added team card

--- a/index.html
+++ b/index.html
@@ -74,10 +74,16 @@
                     <a href="https://www.instagram.com/sidd_thakare0203/"><img src="./assets/instagram.svg" alt="instagram"></a>
                     <a href="https://www.linkedin.com/in/siddhesh-thakare-665954209/"><img src="./assets/linkedin.svg" alt="linkedin"></a>
                 </div>
-
             </div>
-            <!-- Write HTML for your card here. Give the classname as "app__team-content-card" to your card. -->
-            <!-- Classname for image: userImg -->
+            <div class="app__team-content-card">
+                <img src="./assets/about04.png" alt="userImg" class="userImg">
+                <p id="name">Abhishek Shinde</p>
+                <p>SY COMP</p>
+                <div class="app__social">
+                    <a href="https://www.instagram.com/__abhi_shinde_06__/"><img src="./assets/instagram.svg" alt="instagram"></a>
+                    <a href="https://www.linkedin.com/in/abhishek-shinde-7bb403230/"><img src="./assets/linkedin.svg" alt="linkedin"></a>
+                </div>
+            </div>
         </div>
     </div>
     <hr class="prefooter">
