Added team card

--- a/index.html
+++ b/index.html
@@ -78,6 +78,15 @@
             </div>
             <!-- Write HTML for your card here. Give the classname as "app__team-content-card" to your card. -->
             <!-- Classname for image: userImg -->
+            <div class="app__team-content-card">
+                <img src="./assets/about04.png" alt="userImg" class="userImg">
+                <p id="name">Himanshu Kamdi</p>
+                <p>SY COMP</p>
+                <div class="app__social">
+                    <a href="https://www.instagram.com/its_himanshu_kamdi/"><img src="./assets/instagram.svg" alt="instagram"></a>
+                    <a href="https://www.linkedin.com/in/himanshu-kamdi-522905223/"><img src="./assets/linkedin.svg" alt="linkedin"></a>
+                </div>
+            </div>
         </div>
     </div>
     <hr class="prefooter">
