--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 <p>SY COMP</p>
                 <div class="app__social">
                     <a href="https://www.instagram.com/__abhi_shinde_06__/"><img src="./assets/instagram.svg" alt="instagram"></a>
-                    <a href="https://www.linkedin.com/in/abhishek-shinde-7bb403230/"><img src="./assets/linkedin.svg" alt="linkedin"></>
+                    <a href="https://www.linkedin.com/in/abhishek-shinde-7bb403230/"><img src="./assets/linkedin.svg" alt="linkedin"></a>
                 </div>
             </div>
                   
