--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 <div class="card">
                   
                   <div class="card-image">
-                    <img width="320px" src="abhinav.jpg" alt="profile one">
+                    <img width="320px" src="./assets/abhinav.jpg" alt="profile one">
                   </div>
           
                 <ul class="social-icons">
