--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
         <!--Snehasish html code-->
         
 
-      <div class="card profile">
+      <div class="card profile app__team-content-card">
 
         <div class="card-image profile-img">
           <img src="./assets/snehasish.jpg" alt="profile">
