--- a/index.html
+++ b/index.html
@@ -148,11 +148,11 @@
 
       <div class="card profile">
 
-        <div class="card-image profile-img">
+        <div class="card-pic profile-img">
           <img src="./assets/snehasish.jpg" alt="profile">
         </div>
 
-        <ul class="social-icons">
+        <ul class="socials">
           <li>
             <a href="https://www.linkedin.com/in/snehasish-bose-0b3986227/">
               <i class="fab fa-linkedin"></i>
@@ -171,7 +171,7 @@
 
         </ul>
 
-        <div class="details Snehasish">
+        <div class="item Snehasish">
             <h2>Snehasish Bose
               <br>
               <span class="job-title">SY Computer</span>
