made changes to index.html

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
         <!--Snehasish html code-->
         
 
-      <div class="card profile">
+      <div class="snehasishcard profile">
 
         <div class="card-pic profile-img">
           <img src="./assets/snehasish.jpg" alt="profile">
