--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 
       <div class="snehasishcard profile">
 
-            <div class="card profile app__team-content-card">
+            <div class="snehashishcard profile app__team-content-card">
 
 
         <div class="card-pic profile-img">
