--- a/index.html
+++ b/index.html
@@ -183,6 +183,7 @@
 
     </div>
 
+<div class="app__team-content-card">
         <div class="Acontainer">
 
     <div class="Aprofile">
@@ -207,6 +208,7 @@
     <p class="social">E-Mail</p>
   </div>
      
+</div>
 </div>
 
         
