--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/abhinav.css">
     <link rel="stylesheet" href="./css/snehasish.css">
+    <link rel="stylesheet" href="./css/suraj.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://use.fontawesome.com/releases/v5.4.2/css/all.css" rel="stylesheet">
     <title>COEP WebTeam</title>
@@ -105,6 +106,19 @@
 
                 </div>
             </div>
+
+            <!-- Suraj Content Card -->
+            <div class="suraj-card">
+              <img src="./assets/suraj.jpg" alt="userImg" class="myImg">
+              <p id="name">Suraj Das</p>
+              <p>SY ENTC</p>
+              <div class="suraj_social">
+                  <a href="https://www.instagram.com/stoic_sun/"><img src="./assets/instagram.svg" alt="instagram"></a>
+                  <a href="https://www.linkedin.com/in/suraj-das-a034a4230/"><img src="./assets/linkedin.svg" alt="linkedin"></a>
+
+              </div>
+            </div>
+
             <!--abhinav html code-->
           <div class="container-1">
           <div class="container">
