--- a/index.html
+++ b/index.html
@@ -182,7 +182,8 @@
     </div>
 
     </div>
-
+        
+ <div class="app__team-content">
  <div class="app__team-content-card">
                 <img src="./assets/anagha.jpeg" alt="userImg" class="userImg">
                 <p id="name">Anagha Mahure</p>
@@ -192,7 +193,7 @@
                     <a href="https://www.linkedin.com/in/anagha-mahure-290a7622b"><img src="./assets/linkedin.svg" alt="linkedin"></a>
                 </div>
             </div>
-        
+        </div>
     <hr class="prefooter">
     <!-- Footer -->
     <footer>
