--- a/index.html
+++ b/index.html
@@ -113,15 +113,17 @@
 
                 </div>
             </div>
-             <div class="app__team-content-card">
-                <img src="./assets/anagha.jpeg" alt="userImg" class="userImg">
+            <div class="app__team-content-card">
+                <img src="./assets/about04.png" alt="userImg" class="userImg">
                 <p id="name">Anagha Mahure</p>
-                <p>SY Computer</p>
+                <p>SY COMP</p>
                 <div class="app__social">
-                    <a href="https://instagram.com/mahure_anagha?igshid=Yzg5MTU1MDY="><img src="./assets/instagram.svg" alt="instagram"></a>
-                    <a href="https://www.linkedin.com/in/anagha-mahure-290a7622b"><img src="./assets/linkedin.svg" alt="linkedin"></a>
+                    <a href="https://www.instagram.com/mahure_anagha/?igshid=Yzg5MTU1MDY%3D"><img src="./assets/instagram.svg" alt="instagram"></a>
+                    <a href="https://www.linkedin.com/in/anagha-mahure-290a7622b/"><img src="./assets/linkedin.svg" alt="linkedin"></a>
+
                 </div>
             </div>
+            
             <!--abhinav html code-->
           <div class="container-1 ">
           <div class="container">
