--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                 </div>
             </div>
             <div class="app__team-content-card">
-                <img src="./assets/about04.png" alt="userImg" class="userImg">
+                <img src="./assets/anagha.png" alt="userImg" class="userImg">
                 <p id="name">Anagha Mahure</p>
                 <p>SY COMP</p>
                 <div class="app__social">
